--- a/index.html
+++ b/index.html
@@ -1,19 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <script src="main.js" defer></script>
   <title>Plain Game Example</title>
 </head>
+
 <style>
-  .component {
-    width: 75%;
+  body {
+    font-family: Arial;
+  }
+
+  .container {
+    width: 70%;
+    height: 100%;
+    max-width: 750px;
+    margin: auto;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .error {
+    align-items: center;
+    text-align: center;
   }
 </style>
+
 <body>
-  <div class='component'>
+  <div class='container'>
     <free-to-book></free-to-book>
+
+    <div class='error'>
+      <h1>404</h1>
+      <p>Sorry, we can't find that page.</p>
+    </div>
   </div>
 </body>
+
 </html>
