Accuracy and overnight updates

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!doctype html>
 <html class="no-js" lang="">
     <head>
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
         <!-- Google Tag Manager -->
         <script>
             (function(w, d, s, l, i) {
@@ -609,9 +612,9 @@
                 }
 
                 .game {
-                    width: 60%;
+                    width: 70%;
                     height: 100%;
-                    max-width: 600px;
+                    max-width: 700px;
                     margin: auto;
                     justify-content: center;
                     align-items: center;
